<resources>
<!--IMC App-->
    <string name="app_name">PrimeraApp</string>
    <string name="male">HOMBRE</string>
    <string name="female">MUJER</string>
    <string name="male_icon">Icono de Hombre</string>
    <string name="female_icon">Icono de Mujer</string>
    <string name="altura">ALTURA</string>
    <string name="weigth">PESO</string>
    <string name="age">EDAD</string>
    <string name="Calculate">CALCULAR</string>
    <string name="newCalculate">VOLVER A CALCULAR</string>
    <string name="result">Tu Resultado</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="Description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura</string>
    <string name="title_peso_normal">Peso Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura</string>

<!--TODOApp-->
    <string name="todo_welcome_message">Bienvenidos!☺☺☺</string>
    <string name="todo_categories">Categorías</string>
    <string name="task">Tareas</string>
    <string name="todo_add_task">Añade la tarea</string>

    <string name="todo_dialog_add_task_button">Crear Tarea</string>
    <string name="todo_dialog_business">Negocios</string>
    <string name="todo_dialog_Personal">Personal</string>
    <string name="todo_dialog_other">Otros</string>



</resources>